--- a/index.css
+++ b/index.css
@@ -5,7 +5,8 @@ body {
 h1,
 h5 {
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
 }
 
 #chessCanvas {
